# trade-republic-pnl-ledger

./: .gitignore  LICENSE  README.md  analysis.py  build.py  loader.py  pyproject.toml
.github/workflows/: deploy-demo.yml
data/: demo.csv
tests/: test_analysis.py  test_loader.py
web/: app.js  styles.css  template.html
